--- a/candy.html
+++ b/candy.html
@@ -5,6 +5,37 @@
 		<title>Types Of Candy</title>
 	</head>
 	<body>
+		<header>
+		<ul>
+			<h2>As you can guess, we sell candy!</h2>
+			<li>
+				<a href="index.html">
+					<button class="button button1">Main Page</button>
+				</a>
+			</li>
+			<li>
+				<a href="candy.html">
+					<button class="button button1">Kinds Of Candy We Sell</button>
+				</a>
+			</li>
+			<li>
+				<a href="review.html">
+					<button class="button button1">Reviews</button>
+				</a>
+			</li>
+			<li>
+				<a href="about.html">
+					<button class="button button1">About Us</button>
+				</a>
+			</li>
+			<li>
+				<a href="facts.html">
+					<button class="button button1">Cool Facts About Candy!</button>
+				</a>
+			</li>
+		</ul>
+	</head>
+	<nav>
 		<h2>We Sell These Types Of Candys</h2>
 		<br>
 		<img src="https://www.skittles.com/cdn-cgi/image/width=472,height=472,f=auto,quality=90/sites/g/files/fnmzdf586/files/migrate-product-files/d4yf2umrnqkfnaoyyb62.png" width="250" height="250">
@@ -13,8 +44,6 @@
 		<img src="https://www.twix.com/cdn-cgi/image/width=277,height=277,f=auto,quality=90/sites/g/files/fnmzdf236/files/migrate-product-files/pm57alsea7mspqhhgfuf.png" width="250" height="250">
 		<img src="https://upload.wikimedia.org/wikipedia/commons/5/58/Pirulito.png" width="250" height="250">
 		<br>
-		<a href="index.html">
-			<button>Back To Main Page</button>
-		</a>
+	</nav>
 	</body>
 </html>
