--- a/facts.html
+++ b/facts.html
@@ -4,17 +4,54 @@
 	<head>
 		<title>Facts</title>
 	</head>
+	<header>
+	<ul>
+		<h2>As you can guess, we sell candy!</h2>
+		<li>
+			<a href="index.html">
+				<button class="button button1">Main Page</button>
+			</a>
+		</li>
+		<li>
+			<a href="candy.html">
+				<button class="button button1">Kinds Of Candy We Sell</button>
+			</a>
+		</li>
+		<li>
+			<a href="review.html">
+				<button class="button button1">Reviews</button>
+			</a>
+		</li>
+		<li>
+			<a href="about.html">
+				<button class="button button1">About Us</button>
+			</a>
+		</li>
+		<li>
+			<a href="facts.html">
+				<button class="button button1">Cool Facts About Candy!</button>
+			</a>
+		</li>
+	</ul>
+</header>
 	<head>
-		<h1>Facts About Candy!</h1>
-		<br>
-		<h2>1. Candy is Sweet!</h2>
-		<br>
-		<h2>2. Candy Comes in Many Sizes!</h2>
-		<br>
-		<h2>3. Eating To Much Candy Can Kill You!</h2>
-		<br>
-		<a href="index.html">
-			<button>Go Back To Main Page</button>
-		</a>
+	<nav>
+		<table style="width:85%">
+			<tr>
+				<th>Facts</th>
+				<th>Chocolate</th>
+				<th>Hard Candy</th>
+			</tr>
+			<tr>
+				<th>How Its made</th>
+				<th>Chocolate is made with Cacao beans</th>
+				<th>Hard Candy is made by dissolving sugar in water</th>
+			</tr>
+			<tr>
+				<th>Most Popular</th>
+				<th>Milk Chocolate</th>
+				<th>Mints</th>
+			</tr>
+	</nav>
 	</head>
 </html>
