--- a/about.html
+++ b/about.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html>
-	<link rel="stylesheet" type="text/css" href="default.css">
-	<head>
-		<title>What Were All About</title>
-	</head>
 	<body>
-		<button type="button" onclick="alert('We Sell Candy, Its that Simple')">What We Do</button>
-		<br>
-		<a href="https://www.amazon.com/s?k=candy&ref=nb_sb_noss">
-			<button>Click Here To Buy Our Candy!</button>
-		</a>
-		<br>
-		<a href="index.html">
-			<button>Go Back To Main Page</button>
-		</a>
+		<head>
+		<ul>
+			<h2>As you can guess, we sell candy!</h2>
+			<li>
+				<a href="index.html">
+					<button class="button button1">Main Page</button>
+				</a>
+			</li>
+			<li>
+				<a href="candy.html">
+					<button class="button button1">Kinds Of Candy We Sell</button>
+				</a>
+			</li>
+			<li>
+				<a href="review.html">
+					<button class="button button1">Reviews</button>
+				</a>
+			</li>
+			<li>
+				<a href="about.html">
+					<button class="button button1">About Us</button>
+				</a>
+			</li>
+			<li>
+				<a href="facts.html">
+					<button class="button button1">Cool Facts About Candy!</button>
+				</a>
+			</li>
+		</ul>
+	</head>
+		<nav>
+			<header>What Where About</header>
+			<link rel="stylesheet" type="text/css" href="default.css">
+				<title>What Were All About</title>
+				<button type="button" onclick="alert('We Sell Candy, Its that Simple')">What We Do</button>
+				<br>
+		</nav>
 	</body>
 </html>
