--- a/index.html
+++ b/index.html
@@ -6,37 +6,44 @@
 		<title>Candy For All</title>
 	</head>
 	<body>
-			<header>
-				<h1>Welcome to Candy For All</h1>
-				<img class="candy" src="images/Candy_For_All.png">
-			</header>
-			<nav>
-				<ul>
-					<h2>As you can guess, we sell candy!</h2>
-					<li>
-						<a href="candy.html">
-							<button class="button button1">Kinds Of Candy We Sell</button>
-						</a>
-					</li>
-					<li>
-						<a href="review.html">
-							<button class="button button1">Reviews</button>
-						</a>
-					</li>
-					<li>
-						<a href="about.html">
-							<button class="button button1">About Us</button>
-						</a>
-					</li>
-					<li>
-						<a href="facts.html">
-							<button class="button button1">Cool Facts About Candy!</button>
-						</a>
-					</li>
-				</ul>
+		<ul>
+			<h2>As you can guess, we sell candy!</h2>
+			<li>
+				<a href="index.html">
+					<button class="button button1">Main Page</button>
+				</a>
+			</li>
+			<li>
+				<a href="candy.html">
+					<button class="button button1">Kinds Of Candy We Sell</button>
+				</a>
+			</li>
+			<li>
+				<a href="review.html">
+					<button class="button button1">Reviews</button>
+				</a>
+			</li>
+			<li>
+				<a href="about.html">
+					<button class="button button1">About Us</button>
+				</a>
+			</li>
+			<li>
+				<a href="facts.html">
+					<button class="button button1">Cool Facts About Candy!</button>
+				</a>
+			</li>
+		</ul>
 			</nav>
 			<main>
-
+				<header>
+					<h1>Welcome to Candy For All</h1>
+					<img class="candy" src="images/Candy_For_All.png">
+				</header>
+				<nav>
+					<a href="index.html">
+						<button>Go Back To Main Page</button>
+					</a>
 			</main>
 		<footer>
 			<h6>This Buisness is not Responsible for you getting sick or hurt</h6>
