--- a/review.html
+++ b/review.html
@@ -5,14 +5,43 @@
 		<title>Reviews</title>
 	</head>
 	<body>
+		<header>
+		<ul>
+			<h2>As you can guess, we sell candy!</h2>
+			<li>
+				<a href="index.html">
+					<button class="button button1">Main Page</button>
+				</a>
+			</li>
+			<li>
+				<a href="candy.html">
+					<button class="button button1">Kinds Of Candy We Sell</button>
+				</a>
+			</li>
+			<li>
+				<a href="review.html">
+					<button class="button button1">Reviews</button>
+				</a>
+			</li>
+			<li>
+				<a href="about.html">
+					<button class="button button1">About Us</button>
+				</a>
+			</li>
+			<li>
+				<a href="facts.html">
+					<button class="button button1">Cool Facts About Candy!</button>
+				</a>
+			</li>
+		</ul>
+	</head>
+	<nav>
 		<h2>"This Is the Best Candy I've Ever Had!" Henry. K</h2>
 		<br>
 		<h2>"I've Never Had Better Candy" Liz. E</h2>
 		<br>
 		<h2>"I've had Worse..." Mr. Murry</h2>
 		<br>
-		<a href="index.html">
-			<button>Go Back To Main Page</button>
-		</a>
+	</nav>
 	</body>
 </html>
